--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
            <figcaption>Team desarroladores</figcaption>
       </section>
       <p>
-       caracterizada por su capacidad para combinar habilidades técnicas, creatividad e innovación con una comunicación efectiva y una visión compartida. Cada miembro aporta su experiencia en áreas clave, como diseño de interfaces, programación, experiencia de usuario y gestión de proyectos, asegurando un equilibrio entre funcionalidad y estética.  
+       Caracterizada por su capacidad para combinar habilidades técnicas, creatividad e innovación con una comunicación efectiva y una visión compartida. Cada miembro aporta su experiencia en áreas clave, como diseño de interfaces, programación, experiencia de usuario y gestión de proyectos, asegurando un equilibrio entre funcionalidad y estética.  
       </p>
       </section>
     </header>
-      <hr />
+ 
     <main>
       <div>
         <div>
           <h2>Colegas</h2>
           <ul>
             <li>Manuela Álvarez </li>
-            <img src="" alt="">
+            <img class="manuela" src="" alt="">
             <li>Valentina restan</li>
             <li>Sergio novoa</li>
             <li>Alexandra Restrepo</li>
-           
-        
-            </svg>
+
             <li>Javier Sanabria</li>
             <li>Juan Jose Aguirre</li>
             <li>Luis Muñoz</li>
