--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2>Colegas</h2>
           <ul>
             <li>Manuela Álvarez </li>
-            <img class="manuela" src="" alt="">
+    <a href="https://github.com/Amarilla-ss">Mauela</a>
             <li>Valentina restan</li>
             <li>Sergio novoa</li>
             <li>Alexandra Restrepo</li>
