--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -7,7 +7,7 @@
     <title>Team | Contact</title>
   </head>
   <body>
-    <head>
+    <header>
       <h1 class="titulo">DESARROLLADORES WEB</h1>
       <p class="intro">
         Los desarrolladores web Full Stack son esenciales porque dominan tanto
@@ -25,6 +25,16 @@
         src="https://tse4.mm.bing.net/th?id=OIP.Nfavd8yT2drjVyfzBswMCgHaEK&pid=Api&P=0&h=180"
         alt="desarroladoresweb"
       />
-    </head>
+    </header>
+    <footer>
+      <footer>
+        <div class="fotter">
+          <p class="por">
+            &copy;Made in Alvaro Bahos<br />
+            Estudiante de Desarrollo Web - Full Stack
+          </p>
+        </div>
+      </footer>
+    </footer>
   </body>
 </html>
